Gulp build files
In Intellij, Modify `Before Launch task` to call `run-gulp-build`
In Intellij, start the application in debug mode
In a new terminal run `npm run build && npm run watch `

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,13 +9,15 @@
     <title>Taming Thymeleaf</title>
 </head>
 <body>
-<h1 th:text="${pageTitle}">Taming Thymeleaf</h1>
+<h1 th:text="${pageTitle}" class="text-4xl mx-4 mb-4 border-b-4 border-green-700"
+>Taming Thymeleaf</h1>
 <div>
     <ul>
         <li th:each="scientist : ${scientists}">
             <span th:text="${scientist}"></span>
         </li>
     </ul>
+    <span>Scientist</span>
 </div>
 
 </body>
