--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,8 +9,8 @@
     <title>Taming Thymeleaf</title>
 </head>
 <body>
-<h1 th:text="${pageTitle}" class="text-4xl mx-4 mb-4 border-b-4 border-green-700"
->Taming Thymeleaf</h1>
+<h1 th:text="${pageTitle}" class="text-4xl mx-4 mb-4 border-b-4 border-taming-
+  thymeleaf-green">Taming Thymeleaf</h1>
 <div>
     <ul>
         <li th:each="scientist : ${scientists}">
