--- a/src/main/resources/static/css/application.css
+++ b/src/main/resources/static/css/application.css
@@ -2,11 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-/*h1 {*/
-/*    color: #5f5f5f;*/
-/*    border-bottom: 5px solid darkseagreen;*/
-/*}*/
-
-/*ul {*/
-/*    font-variant: small-caps;*/
-/*}*/
+@layer utilities {
+    [x-cloak] {
+        display: none;
+    }
+}
