--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,49 +1,20 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org" xmlns:x-transition="http://www.w3.org/1999/xhtml"
-      lang="en">
+<html layout:decorate="~{layout/layout}" xmlns:layout="http://www.w3.org/1999/xhtml" lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Taming Thymeleaf</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-
-    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
-    <link rel="stylesheet" th:href="@{/css/application.css}">
-
-    <script src="https://unpkg.com/alpinejs@3.7.0/dist/cdn.min.js" defer></script>
-    <script th:src="@{/js/user-popup-menu.js}"></script>
-    <script th:src="@{/js/sidebar-menu.js}"></script>
+    <title>Dashboard</title>
 </head>
 <body>
-<div class="h-screen flex overflow-hidden bg-gray-100"
-     x-data="sidebarMenu()"
-     @keydown.window.escape="closeSidebar">
-    <!-- Off-canvas menu for mobile -->
-    <div th:replace="fragments/sidebar-menu :: mobile"></div>
-
-    <!-- Static sidebar for desktop -->
-    <div th:replace="fragments/sidebar-menu :: desktop"></div>
-
-    <div class="flex flex-col w-0 flex-1 overflow-hidden">
-
-        <div th:replace="fragments/top-menu :: menu"></div>
-        <main class="flex-1 relative overflow-y-auto focus:outline-none" tabindex="0">
-            <div class="py-6">
-                <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
-                    <h1 class="text-2xl font-semibold text-gray-900">Dashboard</h1>
-                </div>
-                <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
-                    <!-- Replace with your content -->
-                    <div class="py-4">
-                        <div class="border-4 border-dashed border-gray-200 rounded-lg h-96"></div>
-                    </div>
-                    <!-- /End replace -->
-                </div>
+<div layout:fragment="page-content">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
+        <h1 class="text-2xl font-semibold text-gray-900">Dashboard</h1>
+    </div>
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
+        <div class="py-4">
+            <div class="border-4 border-dashed border-gray-200 rounded-lg h-96">
+                <div></div>
             </div>
-        </main>
+        </div>
     </div>
 </div>
-
 </body>
 </html>
