Controllers and links

--- a/src/main/resources/templates/fragments/sidebar-menu.html
+++ b/src/main/resources/templates/fragments/sidebar-menu.html
@@ -50,8 +50,8 @@
             <div class="mt-5 flex-1 h-0 overflow-y-auto">
                 <nav class="px-2">
                     <a th:replace="fragments/sidebar-buttons :: mobile-button(link='#', title='Dashboard', menuItem='dashboard', icon='dashboard')"></a>
-                    <a th:replace="fragments/sidebar-buttons :: mobile-button(link='#', title='Team', menuItem='team', icon='team')"></a>
-                    <a th:replace="fragments/sidebar-buttons :: mobile-button(link='#', title='Projects', menuItem='projects', icon='projects')"></a>
+                    <a th:replace="fragments/sidebar-buttons :: mobile-button(link=@{/users}, title='Users', menuItem='users', icon='users')"></a>
+                    <a th:replace="fragments/sidebar-buttons :: mobile-button(link=@{/teams}, title='Team', menuItem='team', icon='team')"></a>
                     <a th:replace="fragments/sidebar-buttons :: mobile-button(link='#', title='Calendar', menuItem='calendar', icon='calendar')"></a>
                     <a th:replace="fragments/sidebar-buttons :: mobile-button(link='#', title='Documents', menuItem='documents', icon='documents')"></a>
                     <a th:replace="fragments/sidebar-buttons :: mobile-button(link='#', title='Reports', menuItem='reports', icon='reports')"></a>
@@ -74,8 +74,8 @@
                 <!-- tag::desktop-nav[] -->
                 <nav class="flex-1 px-2 bg-white">
                     <a th:replace="fragments/sidebar-buttons :: desktop-button(link='#', title='Dashboard', menuItem='dashboard', icon='dashboard')"></a>
-                    <a th:replace="fragments/sidebar-buttons :: desktop-button(link='#', title='Team', menuItem='team', icon='team')"></a>
-                    <a th:replace="fragments/sidebar-buttons :: desktop-button(link='#', title='Projects', menuItem='projects', icon='projects')"></a>
+                    <a th:replace="fragments/sidebar-buttons :: desktop-button(link=@{/users}, title='Users', menuItem='users', icon='users')"></a>
+                    <a th:replace="fragments/sidebar-buttons :: desktop-button(link=@{/teams}, title='Team', menuItem='teams', icon='team')"></a>
                     <a th:replace="fragments/sidebar-buttons :: desktop-button(link='#', title='Calendar', menuItem='calendar', icon='calendar')"></a>
                     <a th:replace="fragments/sidebar-buttons :: desktop-button(link='#', title='Documents', menuItem='documents', icon='documents')"></a>
                     <a th:replace="fragments/sidebar-buttons :: desktop-button(link='#', title='Reports', menuItem='reports', icon='reports')"></a>
