Chapter 8, 9, 10, Pagination, internationalization, Inmemory Data

--- a/src/main/resources/templates/users/index.html
+++ b/src/main/resources/templates/users/index.html
@@ -11,9 +11,7 @@
 </head>
 <body>
 <div layout:fragment="page-content">
-    <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
-        <h1 class="text-2xl font-semibold text-gray-900">Users</h1>
-    </div>
+    <div th:replace="fragments/titles :: title-with-button(#{users.title}, 'user-add', #{users.add}, @{/users/create})"></div>
     <div class="max-w-7xl mx-auto px-4 sm:px-6 md:px-8">
         <div class="py-4">
             <div class="flex flex-col">
@@ -36,7 +34,7 @@
                                 <td th:replace="fragments/table :: data(${user.gender.toString()})"></td>
                                 <td th:replace="fragments/table :: data(${user.birthDate})"></td>
                                 <td th:replace="fragments/table :: data(${user.email.toString()})"></td>
-                                <td th:replace="fragments/table :: dataWithLink(#{edit}, '#')"></td>
+                                <td th:replace="fragments/table :: dataWithLink('Edit', @{'/users/edit/'+${user.id.toString()}})"></td>
                             </tr>
                             </tbody>
                         </table>
